# unitree_rerun_sdk

./: .gitignore  CMakeLists.txt  README.md  process_latest.sh  record.sh
config/: motor_actuators.conf
examples/: recorder.conf
include/unitree_rerun_sdk/: config.h  recorder.h  telemetry_sample.h  telemetry_writer.h  time_utils.h
src/: config.cpp  main.cpp  recorder.cpp  telemetry_writer.cpp  time_utils.cpp
tools/: extract_tn.py  generate_demo_telemetry.py  plot_tn.py  process_latest.py  telemetry_bin.py  telemetry_to_rerun.py
unitree_logs/20260630_113735/: meta.txt  recording.rrd  summary.csv
unitree_logs/20260630_113735/tn_csv/: m00.csv  m01.csv  m02.csv  m03.csv  m04.csv  m05.csv  m06.csv  m07.csv  m08.csv  m09.csv  m10.csv  m11.csv  m12.csv  m13.csv  m14.csv  m15.csv  m16.csv  m17.csv  m18.csv  m19.csv  m20.csv  m21.csv  m22.csv  m23.csv  m24.csv  m25.csv  m26.csv  m27.csv  m28.csv  tn_all.csv
unitree_logs/20260630_113735/tn_plots/: summary.csv
